# twitch-online-notifier

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  eventsub.subdomain.conf  pyproject.toml  requirements.txt
.github/: renovate.json
.github/workflows/: docker-publish.yml  ruff.yml
tests/: test_healthcheck.py  test_main.py  test_settings.py
twitch_online_notifier/: healthcheck.py  main.py  settings.py
