[tool.poetry]
name = "twitch-online-notifier"
version = "1.0.0"
description = "A simple bot that notifies a Discord webhook when a Twitch channel goes online."
authors = ["Joakim Hellsén <tlovinator@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = { version = "^3.9.5" }
discord-webhook = { version = "^1.3.1" }
loguru = { version = "^0.7.2" }
python-dotenv = { version = "^1.0.1" }
twitchapi = { version = "^4.2.0" }

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
pytest = "^8.2.1"
pytest-asyncio = { version = "^0.23.0" }
ruff = "^0.5.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry.scripts]
bot = "twitch_online_notifier.main:start"

[tool.ruff]
lint.select = ["ALL"]
preview = true
fix = true
unsafe-fixes = true
lint.ignore = [
  "D100",    # pydocstyle - missing docstring in public module
  "D104",    # pydocstyle - missing docstring in public package
  "D107",    # pydocstyle - missing docstring in __init__
  "CPY001",  # Missing copyright notice at top of file
  "COM812",
  "ISC001",
  "PLC1901",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "SIM114"]
